Correct spacing on header

--- a/src/blocks/header/Header.scss
+++ b/src/blocks/header/Header.scss
@@ -3,24 +3,28 @@
 header {
   background-color: $dark-purple;
   color: white;
-  padding: 40px;
-  display: flex;
-  .header-image {
-    display: inline-block;
-    width: 15%;
-    img {
-      max-width: 100%;
+  .header-wrapper {
+    width: 70%;
+    margin: auto;
+    display: flex;
+    padding: 40px 0;
+    .header-image {
+      display: inline-block;
+      width: 15%;
+      img {
+        max-width: 100%;
+      }
     }
-  }
-  .header-title {
-    display: inline-block;
-    padding: 30px 30px;
-    h1 {
-      font-weight: normal;
-    }
-    h2 {
-      font-weight: lighter;
-      font-style: oblique;
+    .header-title {
+      display: inline-block;
+      padding: 10px 30px;
+      h1 {
+        font-weight: normal;
+      }
+      h2 {
+        font-weight: lighter;
+        font-style: oblique;
+      }
     }
   }
 }
